buscando a melhor forma de salva utilizando o Filesystem API

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "electron-quick-start",
+  "name": "ciblab",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "web": "webpack"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -18,6 +19,12 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^5.0.6",
-    "electron-packager": "^14.0.1"
+    "electron-packager": "^14.0.1",
+    "minimist": "^1.2.0",
+    "webpack-target-electron-renderer": "^0.4.0"
+  },
+  "dependencies": {
+    "@angular/cli": "^1.7.4",
+    "electron-reload": "^1.4.0"
   }
 }
